[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/boxes/rectangle-15x90.png" type="Texture" id=1]
[ext_resource path="res://scripts/destroyable.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/wood1.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/wood2.mp3" type="AudioStream" id=4]

[node name="plank2" type="RigidBody2D"]
collision_layer = 2
collision_mask = 15
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, 0 )
texture = ExtResource( 1 )

[node name="physicsCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -22, -90, 22, -90, 22, 90, -22, 90 )

[node name="audioCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 39.3962

[node name="audioDestroy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0

[connection signal="body_entered" from="." to="." method="_on_plank_body_entered"]
